<!-- Author: Sean Hansen ID:108841276
Date Started: 9/13/17
Date Completed:
Peer Review:
    Date:
    Team Members:
Contributing Team Members: Areeba Waheed 10/21/17-->

<resources>
    <string name="app_name">UFM</string>
    <string name="drawer_open">Open navigation</string>
    <string name="drawer_close">Close navigation</string>

    <!--Chart Slide Left/Right Animation Duration-->
    <integer name="slide_animation_duration">300</integer>

    <!--Page Titles-->
    <string name="home_title">Home</string>
    <string name="transaction_title">Transaction History</string>
    <string name="earnings_title">Earnings History</string>
    <string name="budget_title">Budget Overview</string>
    <string name="reminder_title">Reminders History</string>
    <string name="account_title">Accounts</string>
    <string name="networth_title">Net Worth</string>

    <!--Nav Drawer Items-->
    <string name="nav_home">Home</string>
    <string name="nav_trans_history">Transaction History</string>
    <string name="nav_budget">Budget Overview</string>
    <string name="nav_networth">Net Worth</string>
    <string name="nav_inoutcome">Earnings</string>
    <string name="nav_reminders">Reminders</string>
    <string name="nav_settings">Settings</string>

    <!--Add Page Titles-->
    <string name="account_add_title">Add Account</string>
    <string name="account_edit_title">Edit Account</string>
    <string name="transaction_add_title">Add Transaction</string>
    <string name="transaction_edit_title">Edit Transaction</string>
    <string name="budget_add_title">Add Budget</string>
    <string name="budget_edit_title">Edit Budget</string>
    <string name="category_add_title">Add Category</string>
    <string name="category_edit_title">Edit Category</string>
    <string name="reminder_add_title">Add Reminder</string>
    <string name="reminder_edit_title">Edit Reminder</string>

    <!--Errors/Misc-->
    <string name="no_transactions">No Transactions to Show!</string>

    <string-array name="categories">
        <item>Grocery</item>
        <item>Gas</item>
        <item>Rent</item>
        <item>Travelling</item>
        <item>Cosmetics</item>
    </string-array>

    <string-array name="accounts">
        <item>BOFA</item>
        <item>Chase</item>
        <item>Cash</item>
    </string-array>

    <string-array name="duration">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string-array name="accountsType">
        <item>Checking</item>
        <item>Savings</item>
        <item>Cash</item>
        <item>Credit Card</item>
    </string-array>
    <string name="title_activity_transaction_history">TransactionHistoryActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
