<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_menu_item"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/budget_menu_item"
        android:title="@string/nav_budget" />

    <item
        android:id="@+id/trans_history_menu_item"
        android:title="@string/nav_trans_history" />

    <item
        android:id="@+id/earnings_menu_item"
        android:title="@string/nav_inoutcome" />

    <item
        android:id="@+id/networth_menu_item"
        android:title="@string/nav_networth" />

    <item
        android:id="@+id/reminder_menu_item"
        android:title="@string/nav_reminders" />

    <item
        android:id="@+id/settings_menu_item"
        android:title="@string/nav_settings" />

</menu>